responded up edits through 50% of chapter 3

--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,16 @@
 
+@article{prensky_temperature_1992,
+	title = {Temperature measurements in boreholes-{An} overview of engineering and scientific applications},
+	volume = {33},
+	issn = {0024-581X},
+	number = {03},
+	journal = {The Log Analyst},
+	author = {Prensky, Stephen},
+	year = {1992},
+	note = {Publisher: OnePetro},
+	pages = {313--333},
+}
+
 @misc{bp_international_2020,
 	type = {Press {Release}},
 	title = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}: bp sets out strategy for decade of delivery towards net zero ambition {\textbar} {News} and insights {\textbar} {Home}},
@@ -2177,7 +2189,7 @@ This project was supported by an American Recovery and Reinvestment Act (ARRA) g
 	pages = {406--413},
 }
 
-@article{lautze_play_2017-1,
+@article{lautze_play_2017,
 	title = {Play fairway analysis of geothermal resources across the {State} of {Hawaii}: 1. {Geological}, geophysical, and geochemical datasets},
 	volume = {70},
 	issn = {0375-6505},
