chapter 3 revisions done?

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -22,13 +22,13 @@ Subsurface conditions show an increase in temperature with depth sustained by th
 \subsubsection{Heat Flow}\label{ch2:heatflow}
 Fundamentally, heat moves in the direction from hot to cold (Second Law of Thermodynamics) at a rate that linearly scales with the thermal gradient. Simple one-dimensional thermal conduction can be characterized by the relationship \citep[Fourier's Law,][p.\ 270]{fowler_solid_2005}:
 \begin{equation}\label{eq:conduction}
-    {\bf q} = -k\nabla T
+    {\bf q} = -k\nabla T,
 \end{equation}
 where ${\bf q}$ is heat flux, or heat flow per unit time per unit area, with S.I.\ units of W$\cdot$m$^{-2}$. Heat flux depends on the gradient of temperature ($T$) and the thermal conductivity ($k$), that is, the ability of material to conduct heat. Different rock types have different values of $k$, e.g., sandstone varies from 1.60--2.10 W/m$\cdot$K, granite has higher values of 1.73--3.98 W/m$\cdot$K \citep[p.\ 30]{dipippo_geothermal_2012}. The most abundant minerals in crustal rocks, feldspars and quartz, can differ in $k$ by up to 3 $\times$ in value, so their relative fractions strongly influence the thermal conductivity of a formation \citep[p.\ 22]{glassley_geothermal_2015}. Regardless, these and other common crustal minerals tend to be poor thermal conductors compared to metals like aluminum (210 W/m$\cdot$K) and iron (73 W/m$\cdot$K), making crustal conduction a slow means of heat transfer \citep[p.\ 23]{dipippo_geothermal_2012}.
 
 Conduction is the primary method of heat transfer in the crust, while convection dominates on global, tectonic scales. The equation governing convection can be arranged to highlight an internal conduction term, illustrating the greater complexity of convection by comparison \citep[p.\ 267]{turcotte_geodynamics_2002}:
 \begin{equation}\label{eq:convection}
-\frac{\partial T}{\partial t} = \frac{1}{\rho c_P}\nabla\bullet\left(k\nabla T\right)-{\bf u}\bullet\nabla T
+\frac{\partial T}{\partial t} = \frac{1}{\rho c_P}\nabla\bullet\left(k\nabla T\right)-{\bf u}\bullet\nabla T,
 \end{equation}
 where \textbf{u} is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1$ K. Convection thus combines heat transfer from conduction with mass movement. Since mantle minerals are poor conductors of heat, the mantle insulates and traps heat from the core near the core-mantle boundary \citep[p.\ 25]{glassley_geothermal_2015}. The combined effects of lower viscosity, thermal expansion, and buoyancy forces near that boundary all drive convective mantle flow \citep[p.\ 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat-flow values at crustal plate boundaries like mid-ocean ridges, as well as intraplate hot spots underlying Hawaii, Yellowstone, and several other locations around the world. Smaller-scale convection also takes place at subduction zones where the water-rich material from the down-diving plate experiences low-temperature melting, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the U.S.\ Pacific Northwest \citep[p.\ 31--33]{press_understanding_2004} --– all locations with geothermal potential.
 
